[package]
name = "translate-ipynb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
reqwest = { version = "0.12.28"}
rig-core = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
hyper-tls = {version = "0.6.0", features = ["vendored"]}
